# Kostats

./: Cargo.toml  README.md
kostats-cli/: Cargo.toml
kostats-cli/src/: args.rs  main.rs
kostats-core/: Cargo.toml
kostats-core/src/: lib.rs
kostats-core/src/database/: mod.rs  player.rs
kostats-core/src/realtime/: group.rs  matchmake.rs  mod.rs  player.rs
kostats-core/src/shared/: player.rs
kostats-web/: Cargo.toml
kostats-web/src/: lib.rs  websocket.rs
kostats-web/src/request/: mod.rs  player.rs
