[package]
name = "kostats-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
kostats-web = { path = "../kostats-web/" }
lazy_static = "1.4.0"
anyhow = "1.0.71"
futures-util = "0.3.28"
