[package]
name = "kostats-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-stream = "0.3.5"
fred = { version = "6.3.0", features = ["monitor"] }
futures-core = "0.3.28"
futures-util = "0.3.28"
serde = "1.0.164"
serde_json = "1.0.96"
snailquote = "0.3.1"
sqlx = { version = "0.6.3", features = ["postgres", "macros", "runtime-tokio-native-tls"] }
tokio = { version = "1.28.2", features = ["full"] }
