[package]
name = "kostats-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
kostats-core = { path = "../kostats-core/" }
lazy_static = "1.4.0"
futures-util = "0.3.28"
bus = "2.4.0"
serde_json = "1.0.97"
ws = "0.9.2"
url = "2.4.0"
urlencoding = "2.1.2"
